--- a/beautification.css
+++ b/beautification.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   font-family: 'Open Sans', sans-serif;
   background: #222;
-  background-image: url('https://source.unsplash.com/1600x900/?landscape');
+  background-image: url('https://www.angouleme-agenda.com/wp-content/uploads/sites/4/2021/11/35241530_ml-1600x900.jpg');
   font-size: 120%;
 }
 
