--- a/beautification.css
+++ b/beautification.css
@@ -11,7 +11,7 @@ body {
 }
 
 .card {
-  background: #000000d0;
+  background: transparent;
   color: white;
   padding: 2em;
   border-radius: 30px;
