--- a/beautification.css
+++ b/beautification.css
@@ -12,7 +12,7 @@ body {
 
 .card {
   background: transparent;
-  color: white;
+  color: Black;
   padding: 2em;
   border-radius: 30px;
   width: 100%;
