--- a/beautification.css
+++ b/beautification.css
@@ -79,7 +79,7 @@ h1.temp {
 .weather.loading:after {
   visibility: visible;
   content: "Know your weather";
-  color: white;
+  color: Black;
   position: absolute;
   top: 0;
   left: 20px;
