--- a/beautification.css
+++ b/beautification.css
@@ -78,9 +78,9 @@ h1.temp {
 
 .weather.loading:after {
   visibility: visible;
-  content: "Know your weather - Developed by Karunakaran v";
+  content: "Know your weather by Karunakaran v";
   color: Black;
   position: absolute;
-  top: 0;
+  top: 5;
   left: 20px;
 }
